--- a/FrontEnd/assets/css/login.css
+++ b/FrontEnd/assets/css/login.css
@@ -8,34 +8,33 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin: 50px 0
+  margin: 50px 0;
 }
 
 section {
-  margin: 50px 0
+  margin: 50px 0;
 }
 
 h1 {
   display: flex;
   flex-direction: column;
-  font-family: 'Syne';
+  font-family: 'Syne', sans-serif;
   font-size: 22px;
   font-weight: 800;
-  color: #B1663C
+  color: #B1663C;
 }
 
-h1>span {
-  font-family: 'Work Sans';
+h1 > span {
+  font-family: 'Work Sans', sans-serif;
   font-size: 10px;
   letter-spacing: 0.1em;
-  ;
 }
 
 h2 {
-  font-family: 'Syne';
+  font-family: 'Syne', sans-serif;
   font-weight: 700;
   font-size: 30px;
-  color: #1D6154
+  color: #1D6154;
 }
 
 nav ul {
@@ -50,25 +49,30 @@ nav li {
   font-size: 1.2em;
 }
 
-li:hover {
+li:hover,
+li:focus {
   color: #B1663C;
 }
 
-#contact {
+a {
+  text-decoration: none;
+  color: black;
+}
+
+[id="contact"] {
   width: 50%;
   margin: auto;
 }
 
-#contact>* {
+[id="contact"] > * {
   text-align: center;
-
 }
 
-#contact h2 {
+[id="contact"] h2 {
   margin-bottom: 20px;
 }
 
-#contact form {
+[id="contact"] form {
   text-align: left;
   margin-top: 30px;
   display: flex;
@@ -80,24 +84,24 @@ li:hover {
   text-align: center;
 }
 
-#contact input {
+[id="contact"] input {
   height: 50px;
   font-size: 1.2em;
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-#contact label {
+[id="contact"] label {
   margin: 2em 0 1em 0;
 }
 
-#contact textarea {
+[id="contact"] textarea {
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="button"] {
-  font-family: 'Syne';
+[type="button"] {
+  font-family: 'Syne', sans-serif;
   font-weight: 700;
   color: white;
   background-color: #1D6154;
@@ -112,8 +116,8 @@ input[type="button"] {
   display: none;
 }
 
-footer nav ul {
+footer ul {
   display: flex;
   justify-content: flex-end;
-  margin: 2em
+  margin: 2em;
 }
