--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -53,7 +53,7 @@ body {
 	font-family: 'Work Sans' ;
 	font-size: 14px;
 }
-header {
+body > header {
 	display: flex;
 	justify-content: space-between;
 	margin: 50px 0
@@ -248,4 +248,25 @@ ul button:nth-child(4) {
 .filters {
 	display: flex;
 	justify-content: center;
+}
+
+[id="modify"] {
+	cursor: pointer;
+	display: none;
+}
+
+[id="portfolio"] header {
+	display: flex;
+	justify-content: center;
+	align-items: baseline;
+	gap: 30px;
+}
+
+[id="admin-screen"] {
+	display: flex;
+}
+
+[id="edit"] {
+	display: flex;
+	color: black;
 }
