--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -49,7 +49,6 @@ table {
 /** end reset css**/
 body {
 	max-width: 1140px;
-	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
 }
@@ -253,6 +252,8 @@ ul button:nth-child(4) {
 [id="modify"] {
 	cursor: pointer;
 	display: none;
+	display: flex;
+	gap: 7px;
 }
 
 [id="portfolio"] header {
@@ -262,11 +263,32 @@ ul button:nth-child(4) {
 	gap: 30px;
 }
 
-[id="admin-screen"] {
-	display: flex;
-}
-
 [id="edit"] {
 	display: flex;
+	background-color: black;
+	color: white;
+	width: 100%;
+	padding: 10px;
+	justify-content: center;
+	gap: 10px;
+	align-items: center;
+	display: none;
+}
+
+[id="edit"] label {
+	background-color: white;
 	color: black;
+	padding: 10px 20px;
+	border-radius: 20px;
+}
+
+body:not([id="edit"]) {
+	margin: auto;
+}
+
+[id="edit-picture"] {
+	cursor: pointer;
+	display: none;
+	display: flex;
+	gap: 7px;
 }
